--- a/PreferencesAPI/Preferences/HtmlPage1.html
+++ b/PreferencesAPI/Preferences/HtmlPage1.html
@@ -1,42 +1,28 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Preferences</title>
+    <title>Preference</title>
     <meta charset="utf-8">
+    
 </head>
 <body>
-    <center>
+    <Left>
         <H2>Please Choose Your Preference(s) Below:</H2>
         <div id="response">
             <pre></pre>
         </div>
 
+        <br>
+
         <form id="my-form">
+            <input type="text" name="Preference" placeholder="Preferences" />
+
+            <button type="submit">Submit</button>
         </form>
-    </center>
+    </Left>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="./app.js"></script>
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
-    <script>
-        var uri = 'api/preferences';
-
-        $(document).ready(function () {
-            $.getJSON(uri)
-                .done(function (data) {
-                    $.each(data, function (key, item) {
-                        $('<li>', { text: formatItem(item) }).appendTo($('#preferences'));
-                    });
-                });
-        });
-
-        function formatPreference(preference) {
-            return preference;
-        }
-
-
-    </script>
-
-
-
 </body>
 </html>
